--- a/frontend/src/app/modules/common/table/table.component.html
+++ b/frontend/src/app/modules/common/table/table.component.html
@@ -37,12 +37,12 @@
                 <!-- Status --> <!-- checking if status exist or not -->
                 <div *ngIf="head.field=='status'" class="text-center">
                     <!-- check status and set status badges -->
-                    <td *ngIf="item.isActive">
+                    <!-- <td *ngIf="item.isActive">
                         <span class="badge badge-success">Active</span>
                         </td>
                         <td *ngIf="!item.isActive">
                         <span class="badge badge-warning">In active</span>
-                        </td>
+                        </td> -->
                 </div>
                 <!-- Action Button --> <!-- checking if action exist or not -->
                 <div *ngIf="head.field=='action'" class="text-center">
