--- a/frontend/src/app/ui-element/sidebar/sidebar.component.html
+++ b/frontend/src/app/ui-element/sidebar/sidebar.component.html
@@ -40,6 +40,13 @@
             <span>Books</span>
         </a>
     </li>
+    
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/orders">
+            <i class="fas fa-fw fa-table"></i>
+            <span>orders</span>
+        </a>
+    </li>
 
     <!-- Divider -->
     <hr class="sidebar-divider">
