--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -10,3 +10,13 @@
     height: 33rem;
     padding-top: 4rem;
 }
+
+.chart-area, .chart-pie {
+    width: 100%;
+    height: 100%;
+  }
+  
+  app-bar-chart, app-line-chart {
+    width: 100% !important;
+    height: 300px; /* Set a fixed height */
+  }
