chnage chart view, show bom, chnage table view and upate modal

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ng-container>
+<ng-container *ngIf="loginStatus">
   <div id="wrapper">
       <!-- Sidebar -->
       <app-sidebar></app-sidebar>
@@ -21,4 +21,7 @@
       </div>
       <!-- End of Content Wrapper -->
   </div>
+</ng-container>
+<ng-container *ngIf="!loginStatus">
+    <router-outlet></router-outlet>
 </ng-container>
