--- a/frontend/src/app/ui-element/header/header.component.css
+++ b/frontend/src/app/ui-element/header/header.component.css
@@ -12,7 +12,7 @@ navbarDropdown{
   /*  */
 
 .navbar-brand-padding{
-    padding-left: 1rem;
+    /* padding-left: 1rem; */
     /* padding-right: 4rem; */
     font-size: .999rem;
 }
