--- a/frontend/src/app/modules/common/table/table.component.html
+++ b/frontend/src/app/modules/common/table/table.component.html
@@ -3,15 +3,20 @@
     <thead>
         <tr>
         <th>SL-No.</th>
-        <th *ngFor="let head of HeadArray">{{head.head}} </th> 
+        <th *ngFor="let head of HeadArray" [class.text-center]="head.field === 'action'">{{head.head}} </th> 
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let item of BodyArray;let sr=index">
             <td>{{sr+1}}</td>
             <td  *ngFor="let head of HeadArray">
+                <div *ngIf="head.field=='product'"> 
+                    {{ item.product === 'steel_bottle' ? 'Steel Bottle' : 
+       item.product === 'tiffin_box' ? 'Tiffin Box' : 
+       item.product }}
+                </div>
                 <!-- omint Description -->
-                <div *ngIf="head.field!='description'"> 
+                <div *ngIf="head.field!='description' && head.field !== 'product' && head.field !== 'status'"> 
                     {{item[head.field]}}
                 </div>
                 <!-- Details View Hyperlink -->
@@ -21,18 +26,22 @@
                     </a>
                 </div>
                 <!-- Description -->
-                <div *ngIf="head.field=='description'" class="long-text-wrap">
+                <!-- <div *ngIf="head.field!=='description'" class="long-text-wrap">
                     {{item.description}}
-                </div>
+                </div> -->
                 <!-- Alive --> <!-- checking if status exist or not -->
-                <div *ngIf="head.field=='vitalStatus'" class="text-center">
+                <!-- <div *ngIf="head.field=='vitalStatus'" class="text-center"> -->
                     <!-- check status and set status badges -->
-                    <td *ngIf="item.isAlive">
+                    <!-- <td *ngIf="item.isAlive">
                         <span class="badge badge-success">Alive</span>
                         </td>
                         <td *ngIf="!item.isAlive">
                         <span class="badge badge-warning">Expired</span>
                         </td>
+                </div> -->
+                <!-- Status Formatting -->
+                <div *ngIf="head.field === 'status'">
+                    {{ item.status === 'IN_PROGRESS' ? 'IN PROGRESS' : item.status }}
                 </div>
                 <!-- Status --> <!-- checking if status exist or not -->
                 <div *ngIf="head.field=='status'" class="text-center">
@@ -49,17 +58,25 @@
                     <div class="badge-side-by-side">
                         <div class="center">
                             <!-- Update button-->
-                            <a type="button" class="edit " title="Edit" data-toggle="modal" [attr.data-target]="'#'+updateModal" (click)="update(item)">
-                                <i class="material-icons" style="color:#4e73df ">&#xE254;</i></a>
+                            <button 
+                            type="button" 
+                            class="btn btn-primary" 
+                            [disabled]="item.status === 'DONE'"
+                            title="Edit" data-toggle="modal" [attr.data-target]="'#'+updateModal" (click)="update(item)">
+                            {{ item.status === 'IN_PROGRESS' ? 'IN PROGRESS' : item.status }}
+                        </button>
+            
+                            <!-- <a type="button" class="edit " title="Edit" data-toggle="modal" [attr.data-target]="'#'+updateModal" (click)="update(item)">
+                                <i class="material-icons" style="color:#4e73df ">&#xE254;</i></a> -->
                             <!-- Checking table data is active or not -->
-                                <span *ngIf="item.isActive">
+                                <!-- <span *ngIf="item.isActive">
                                 <a type="button" class="delete" title="Delete" data-toggle="modal" [attr.data-target]="'#'+deleteModal" (click)="delete(item)">
                                     <i class="material-icons" style="color:red">&#xE872;</i></a>
                             </span>
                             <span *ngIf="!item.isActive">
                                 <a type="button" class="delete isDisabled" title="Delete" data-toggle="modal" [attr.data-target]="'#'+deleteModal" (click)="delete(item)">
                                     <i class="material-icons" style="color:dimgrey">&#xE872;</i></a>
-                            </span>
+                            </span> -->
                         </div>
                         
                     </div>
