--- a/frontend/src/app/ui-element/header/header.component.html
+++ b/frontend/src/app/ui-element/header/header.component.html
@@ -1,9 +1,9 @@
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
     <!-- Navbar Brand-->
-    <a class="navbar-brand navbar-brand-padding ps-3" routerLink="/">Shishu Shatiya Samsad</a>
+    <a class="navbar-brand navbar-brand-padding ps-3" routerLink="/">Production Management</a>
     <!-- <a class="navbar-brand ps-3" href="index.html">Start Bootstrap</a> -->
     <!-- Sidebar Toggle-->
-    <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+    <!-- <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button> -->
     <!-- Navbar Search-->
     <!-- <form class="d-none d-md-inline-block form-inline ">
         <div class="input-group">
